# tnt

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yml  AzureBuild.yaml  CHANGELOG.md  CMakeLists.txt  CODESTYLE.md  CONTRIBUTING.md  Doxyfile.in  INSTALL.md  LICENSE  NOTES.md  README.md  appveyor.yml  azure-pipelines.yml  build.json  conf.py  game.lua  index.rst  main.cpp  requirements.txt  test.json  unit.cpp  vcpkg.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  codeql-analysis.yml  test.yml  update.yml  x64-release.yml
_build/doctrees/: environment.pickle  index.doctree
_build/html/: classtnt_1_1_action_list-members.html  classtnt_1_1_action_list.html  classtnt_1_1_bench_valid_timer-members.html  classtnt_1_1_blocking_action-members.html  classtnt_1_1_blocking_action.html  classtnt_1_1_buoyancy_force-members.html  classtnt_1_1_buoyancy_force.html  classtnt_1_1_cable_link.html  classtnt_1_1_contact.html  classtnt_1_1_contact_resolver-members.html  classtnt_1_1_delay.html  classtnt_1_1_drag_force.html  classtnt_1_1_expected-members.html  classtnt_1_1_expected.html  classtnt_1_1_expected_3_01void_01_4-members.html  classtnt_1_1_expected_3_01void_01_4.html  classtnt_1_1_fake_spring.html  classtnt_1_1_force_generator.html  classtnt_1_1_particle-members.html  classtnt_1_1_snipper.html  classtnt_1_1_spring_force-members.html  classtnt_1_1_spring_force.html  classtnt_1_1_texture_atlas-members.html  classtnt_1_1_window-members.html  classtnt_1_1_window.html  classtnt_1_1_world-members.html  classtnt_1_1_world.html  classtnt_1_1asset__cache_3_01_mix___music_00_01_i_01_4-members.html  classtnt_1_1asset__cache_3_01_mix___music_00_01_i_01_4.html  classtnt_1_1asset__cache_3_01_s_d_l___texture_00_01_i_01_4-members.html  classtnt_1_1asset__cache_3_01_s_d_l___texture_00_01_i_01_4.html  classtnt_1_1asset__cache_3_01_t_t_f___font_00_01_i_01_4.html  classtnt_1_1asset__cache_3_01_texture_atlas_00_01_i_01_4.html  classtnt_1_1bench__stream.html  classtnt_1_1bubble__sort__view-members.html  classtnt_1_1bubble__sort__view.html  classtnt_1_1circular__buffer-members.html  classtnt_1_1circular__buffer.html  classtnt_1_1detail_1_1base__action-members.html  classtnt_1_1detail_1_1base__action.html  (+174 more)
_build/xml/: _actions_8hpp.xml  _any_8hpp.xml  _assert_8hpp.xml  _audio_player_8hpp.xml  _bench_8hpp.xml  _benchmark_8hpp.xml  _bit_flags_8hpp.xml  _bones_8hpp.xml  _co_utils_8hpp.xml  _contact_8hpp.xml  _containers_8hpp.xml  _convert_8hpp.xml  _expected_8hpp.xml  _force_generator_8hpp.xml  _formated_rectangle_8hpp.xml  _formated_vector_8hpp.xml  _graphics_8hpp.xml  _im_gui_8hpp.xml  _input_8hpp.xml  _json_rectangle_8hpp.xml  _json_vector_8hpp.xml  _link_8hpp.xml  _logger_8hpp.xml  _lua_core_8hpp.xml  _lua_utils_8hpp.xml  _math_utils_8hpp.xml  _mirror_8hpp.xml  _particle_8hpp.xml  _physics_8hpp.xml  _poly_resource_8hpp.xml  _random_8hpp.xml  _snipper_8hpp.xml  _sort_8hpp.xml  _springing_8hpp.xml  _static_pimpl_8hpp.xml  _steering_8hpp.xml  _task_8hpp.xml  _timer_8hpp.xml  _tn_t_8hpp.xml  _type_info_8hpp.xml  (+137 more)
api/: pcg.rst
api/ecs/: Scripts.rst  Steering.rst
api/file/: AudioPlayer.rst
api/math/: Easings.rst  Utils.rst
api/pcg/: Noise.rst  Random.rst
assets/: art_license.txt
cmake/: CompilerWarnings.cmake  Doxygen.cmake  FindSphinx.cmake  Sanitizers.cmake  Setup.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  TnTConfig.cmake  TnTConfig.cmake.in  UpdateSubmodules.cmake
data/: sample.yaml
docs/: 404.md  index.html  requirements.txt
docs/api/: async.rst  file.rst  imgui.rst  pcg.rst
docs/tnt/: README.md  index.md
examples/: doo_ecs_ex.cpp  objects.json
examples/ik_bones/: bones.tnt
examples/project/: game.tnt
examples/sdk/: doo_ecs_ex.cpp
extra/: .editorconfig  tnt.natvis
include/: .gitignore  Allocator.hpp  Application.hpp  AssetManager.hpp  Benchmark.hpp  Camera.hpp  Collide.hpp  Concepts.hpp  Config.hpp  Easings.hpp  Expected.hpp  FormatedTypes.hpp  Graphics.hpp  InputManager.hpp  JsonTypes.hpp  Logger.hpp  LuaSandbox.hpp  Matrix.hpp  Object.hpp  Observer.hpp  Renderable.hpp  RigidBody.hpp  Scene.hpp  ScopeUtils.hpp  Timer.hpp  TnT.hpp  TnT.ixx  TypeUtils.hpp  Utils.hpp  Vector.hpp  YamlTypes.hpp  version.h.in
include/async/: CoUtils.hpp  Generator.hpp  Task.hpp
include/core/: Application.hpp  AudioPlayer.hpp  Camera.hpp  Config.hpp  Context.hpp  Graphics.hpp  Input.hpp  InputManager.hpp  Scene.hpp  Space.hpp  Window.hpp
include/doo_ecs/: Animations.hpp  Base.hpp  Bones.hpp  Cameras.hpp  Objects.hpp  Physics.hpp  Scripts.hpp  Sprites.hpp  Steering.hpp  System.hpp
include/doo_tiled/: TileMap.hpp
include/ecs/: AnimatedSprite.hpp  Base.hpp  Component.hpp  Components.hpp  Object.hpp  Objectv2.hpp  Particle.hpp  RigidBody.hpp  Scriptable.hpp  Sprite.hpp
include/ecs2/: Drawable.hpp  Object.hpp  Transformable.hpp
include/exp/: Actionsv2.hpp  Actionsv3.hpp  Allocator.hpp  Easingsv2.hpp  ExitQueue.hpp  Expected.hpp  Logger.hpp  LuaManager.hpp  Objectv2.hpp  Runtimer.hpp  TypeListsv2.hpp
include/fileIO/: AssetCache.hpp  AssetManager.hpp  AudioPlayer.hpp  File.hpp  Snipper.hpp  TextureAtlas.hpp  VirtualFS.hpp  VirtualFileSystem.hpp
include/format/: FormatedHashString.hpp  FormatedRectangle.hpp  FormatedTypeInfo.hpp  FormatedVector.hpp
include/gui/: Widget.hpp  Window.hpp
include/imgui/: ImGui.hpp  gui_config.hpp
modules/: Core.ixx  Expected.hpp.ifc  TnT.Utils.ixx  TnT.ixx  VirtualFileSystem.hpp.ifc
scripts/: actions.lua  class.lua  easings.lua  enum.lua  format-proj.ps1  live.lua  main.lua  perlin.py  player.lua  queue.lua  test-actions.lua  test.lua  ttf2png.py  tuple.lua  utils.lua  vector.lua
src/: Actions.cpp  Application.cpp  AudioPlayer.cpp  CMakeLists.txt  Camera.cpp  InputManager.cpp  Logger.cpp  LuaSandbox.cpp  Object.cpp  RigidBody.cpp  Scene.cpp  Timer.cpp
test/: rpptest.cpp  test-stackalloc.cpp  test-timer.cpp  test.exp  test_logger.bat  test_logger.cpp  test_rt.bat  test_rt1.bat  test_rt2.bat  test_timer.bat  testlib.c  testlib.cpp  testlib.h
tnt/: index.md
(+806 files in other folders)
